--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
     <title>Title</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/public/css/bootstrap.css" rel="stylesheet">
+    <link href="/public/css/bootstrap-cerulean.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="/public/css/app.css" rel="stylesheet">
