--- a/views/index.html
+++ b/views/index.html
@@ -19,6 +19,16 @@
     <link href="/public/css/bootstrap-theme.css" rel="stylesheet">
     -->
 
+    <script src="/public/js/jquery-10.0.0.js"></script>
+    <script src="/public/js/angular.min.js"></script>
+    <script src="/public/js/bootstrap-3.0.0.min.js"></script>
+    <!-- http://mgcrea.github.io/angular-strap/ -->
+    <script src="/public/js/angular-strap.min.js"></script>
+    <script src="/public/js/app.js"></script>
+    <script src="/public/js/controllers.js"></script>
+    <script src="/public/js/services.js"></script>
+    <script src="/public/js/directives.js"></script>
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="/public/js/html5shiv.js"></script>
@@ -55,15 +65,5 @@
         <p class="text-muted credit" ><a href="http://about.m/enreeco" >Enrico Murru</a> &copy; 2013</p>
     </div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/public/js/jquery-10.0.0.js"></script>
-    <script src="/public/js/bootstrap-3.0.0.min.js"></script>
-    <script src="/public/js/angular.min.js"></script>
-    <script src="/public/js/app.js"></script>
-    <script src="/public/js/controllers.js"></script>
-    <script src="/public/js/services.js"></script>
-    <script src="/public/js/directives.js"></script>
   </body>
 </html>
