--- a/public/partials/info-modal.partial.html
+++ b/public/partials/info-modal.partial.html
@@ -5,7 +5,7 @@
         <div class="alert alert-info" ng-show="_infoMsg"><strong>INFO</strong> {{_infoMsg}}</div>
         <div class="alert alert-danger" ng-show="_errMsg"><strong>ERROR</strong> {{_errMsg}}</div>
         <div class="alert alert-warning" ng-show="_warnMsg"><strong>WARNING</strong> {{_warnMsg}}</div>
-        <div class="alert alert-success" ng-show="_succMsg"><h3>SUCCESS</h3> {{_succMsg}}</div>
+        <div class="alert alert-success" ng-show="_succMsg"><strong>SUCCESS</strong> {{_succMsg}}</div>
         <button class="btn btn-default btn-block" ng-click="dismiss()">Close</button>
       </div>
   </div>
