--- a/views/index.html
+++ b/views/index.html
@@ -15,9 +15,7 @@
 
     <!-- Custom styles for this template -->
     <link href="/public/css/app.css" rel="stylesheet">
-    <!--
-    <link href="/public/css/bootstrap-theme.css" rel="stylesheet">
-    -->
+    <link href="/public/css/font-awesome.min.css" rel="stylesheet">
 
     <script src="/public/js/jquery-10.0.0.js"></script>
     <script src="/public/js/angular.min.js"></script>
